# datasheet-backend-assignment-master

./: .env.example  .gitignore  AGENT_DESIGN.md  ARCHITECTURE.md  HLD.md  IMPLEMENTATION_PLAN.md  README.md  README2.md  docker-compose.yml  pyproject.toml  start.md  test_comparison.py  test_pipeline.py
alembic/: env.py
alembic/versions/: 9e2693de160c_redesigned_schema.py  c6c3dd647f48_add_chat_messages_table.py
app/: config.py  database.py  main.py
app/api/: documents.py  entities.py  fields.py  query.py  sessions.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.tsx  index.css
app/frontend/src/api/: client.ts
app/frontend/src/components/: AgentChat.tsx  DocumentSidebar.tsx  FieldPanel.tsx  PageViewer.tsx  QueryPanel.tsx
app/frontend/src/pages/: SessionDetailPage.tsx  SessionsPage.tsx
app/frontend/src/types/: index.ts
app/models/: __init__.py  base.py  chat_message.py  document.py  document_page.py  entity_document.py  equipment_entity.py  extracted_field.py  field_correction.py  session.py
app/schemas/: documents.py  sessions.py
app/services/: agent.py  document_processor.py  extraction.py  extraction_progress.py  gap_analysis.py  post_processing.py  query.py
docs/: ARCHITECTURE.md  EXTRACTION_PIPELINE_PLAN.md
tests/: conftest.py  test_phase1.py  test_phase10.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase7.py  test_phase8.py  test_phase9.py
